1. Datepicker Added 2. Added placeholders for popup Input 3. Popup backdrop changed 4. spacing issue solved in the chat box area

--- a/frontend/web/css/booking-request/booking-request.scss
+++ b/frontend/web/css/booking-request/booking-request.scss
@@ -412,7 +412,7 @@ $color-dark: #1E2339;
 }
 
 .booking-lists-wrapper {
-    margin: 20px 0 0;
+    margin: 20px 0 30px;
 
     .booking-lists-btns {
         display: flex;
@@ -471,8 +471,8 @@ $color-dark: #1E2339;
 
 .comment-box-wrapper {
     display: flex;
-    margin: 30px 0 0;
-    padding: 30px 50px 0;
+    margin: 0;
+    padding: 30px 50px;
     align-items: flex-start;
     justify-content: space-between;
     border-top: 1px solid #ABB0C1;
@@ -834,6 +834,12 @@ span.payment-block {
     color: $color-dark;
     font-family: $font-bold !important;
     font-size: 12px;
+
+    &::placeholder {
+        font-family: $font-bold !important;
+        font-size: 12px;
+        color: $color-dark;
+    }
 
     &:hover,
     &:focus {
